ユーザーのインクリメンタルサーチ機能を追加

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -11,6 +11,7 @@
 @import 'partials/_header';
 @import 'partials/_messagesBox';
 @import 'partials/_userList';
+@import 'partials/_searchBox';
 
 // Components
 @import 'components/_replyBox';
