--- a/app/assets/stylesheets/partials/_messagesBox.scss
+++ b/app/assets/stylesheets/partials/_messagesBox.scss
@@ -2,7 +2,7 @@
 
   &__list {
     position: absolute;
-    top: 60px;
+    top: 30px;
     left: 300px;
     right: 0;
     bottom: 67px;
@@ -18,6 +18,7 @@
       font-weight: 400;
       border-radius: 10px;
       padding: 10px 15px;
+      margin-bottom: 10px;
     }
 
     &--from-current {
