--- a/app/assets/stylesheets/partials/_userList.scss
+++ b/app/assets/stylesheets/partials/_userList.scss
@@ -8,10 +8,11 @@
   border-right: 1px solid rgba( 0, 0, 0, 0.1 );
 
   &__item {
-    padding: 14px 10px 14px 15px;
+    //padding: 14px 10px 14px 15px;
     border-bottom: 1px solid rgba( 0, 0, 0, 0.1 );
-    cursor: pointer;
-
+    &:hover {
+     background-color: lightgreen;
+    }
     &--new {
       background: #EEF1F6;
       font-weight: 500;
@@ -23,7 +24,7 @@
     }
 
     &--active {
-      background: #93C26D;
+      background: lightgreen;
       color: #fff;
       font-weight: 500;
       position: relative;
@@ -35,7 +36,7 @@
         height: 0;
         border-style: solid;
         border-width: 40px 0 40px 20px;
-        border-color: transparent transparent transparent #93C26D;
+        border-color: transparent transparent transparent lightgreen;
         position: absolute;
         display: block;
         right: -20px;
@@ -57,10 +58,14 @@
 
     &--details {
       float: left;
+      width: 270px;
+      height: 50px;
       &__name {
         margin: 0;
         font-size: 16px;
         font-weight: inherit;
+        line-height: 50px;
+        padding-left: 10px;
       }
     }
 
@@ -68,9 +73,15 @@
     .fa-times-circle {
       color: red;
       float: right;
+      text-align: center;
       &:before {
         font-size: 20px;
-        line-height: 25.56px;
+        line-height: 50px;
+        padding: 0 5px;
+      }
+      &:hover {
+        background-color: red;
+        color: #EEF1F6;
       }
     }
 
