--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -9,11 +9,15 @@
   .page-transition {
     float: left;
     width: calc(100vw - 270px);
-    &__title, &__logout, &__my-page {
+    &__title, &__my-page {
       line-height: 30px;
+      text-decoration: none;
       &:hover {
         opacity: 0.6;
         cursor: pointer;
+      }
+      &:visited, &:link {
+        color: inherit;
       }
     }
     &__title {
@@ -22,7 +26,7 @@
       font-weight: bold;
       padding-left: 5px;
     }
-    &__logout, &__my-page {
+    &__my-page {
       float: right;
       font-size: 18px;
       font-weight: bold;
