--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,7 +6,8 @@
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
-    .account-page__inner--left, .account-page__inner--right {
+    .account-page__inner--left,
+    .account-page__inner--right {
       float: left;
       width: 50%;
     }
