--- a/app/assets/stylesheets/partials/_userList.scss
+++ b/app/assets/stylesheets/partials/_userList.scss
@@ -6,6 +6,7 @@
   width: 300px;
   background: rgba( 0, 0, 0, 0.03 );
   border-right: 1px solid rgba( 0, 0, 0, 0.1 );
+  overflow-y: scroll;
   &__item {
     border-bottom: 1px solid rgba( 0, 0, 0, 0.1 );
     &:hover {
@@ -26,18 +27,6 @@
       position: relative;
       border-top: 1px solid rgba( 0, 0, 0, 0.1 );
       margin-top: -1px;
-      &:before {
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 40px 0 40px 20px;
-        border-color: transparent transparent transparent lightgreen;
-        position: absolute;
-        display: block;
-        right: -20px;
-        top: 0;
-        content: " ";
-      }
     }
     &__picture {
       width: 50px;
