ユーザー検索結果に背景色を追加

--- a/app/assets/stylesheets/partials/_searchBox.scss
+++ b/app/assets/stylesheets/partials/_searchBox.scss
@@ -8,6 +8,7 @@
     .chat-user {
       border: solid 1px lightgray;
       height: 30px;
+      background-color: white;
       &:after {
         content: "";
         clear: both;
